<resources>
    <string name="app_name">Hotel Booking</string>
    <string name="rating_text">4.5 (21 ratings)</string>
    <string name="daily_charge">$99/day</string>
    <string name="hotel_name">The Westeen</string>
    <string name="discount">Get 50% off</string>
    <string name="hotel_location">Gulshan Circle 2, Dhaka</string>
    <string name="hotel_presents">Free wifi - Swimming</string>
    <string name="location">Location</string>
    <string name="explore">Explore</string>
    <string name="filters">Filters</string>
    <string name="dhaka">Dhaka</string>
    <string name="checkin_date">07 Mar,2019</string>
    <string name="checkin">Check In</string>
    <string name="checkout_date">12 Mar,2019</string>
    <string name="checkout">Check Out</string>
    <string name="count">Count</string>
    <string name="count_value">2 Adults</string>
    <string name="rooms">Rooms</string>
    <string name="rooms_value">03</string>
    <string name="top_search">Top Searches</string>
    <string name="recent_search">Recent Searches</string>
    <string name="search_now">Search Now</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="sort_by">Sort By</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="none">None</string>
    <string name="price_range">Price Range</string>
    <string name="filter_now">Filter Now</string>

    <string-array name="spinner_array">
        <item>Dhaka</item>
        <item>Chittagong</item>
        <item>Khulna</item>
        <item>Rajshahi</item>
    </string-array>

    <string-array name="price_array">
        <item>100 $</item>
        <item>200 $</item>
        <item>300 $</item>
        <item>400 $</item>
    </string-array>
</resources>
