<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/explore"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.card.MaterialCardView
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            app:cardCornerRadius="@dimen/filter_corner_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/filter_layout"
            android:gravity="center"
            android:background="@color/textColor2"
            android:paddingTop="@dimen/filter_padding"
            android:paddingBottom="@dimen/filter_padding"
            android:paddingRight="@dimen/inner_margin_normal"
            android:paddingLeft="@dimen/inner_margin_normal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/filter"
                android:layout_width="@dimen/filter_corner_radius"
                android:layout_height="@dimen/filter_corner_radius" />
            <TextView
                android:text="@string/filters"
                android:layout_marginLeft="@dimen/inner_margin"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        </android.support.design.card.MaterialCardView>
    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_marginTop="@dimen/card_corner_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_location"
        android:background="@drawable/location_shape_background"
        android:layout_marginTop="@dimen/large_margin"
        android:padding="@dimen/card_corner_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/inner_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="@color/textColorSecondary"
            android:text="@string/dhaka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/inner_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_near_me"/>
    </RelativeLayout>
        <TextView
            android:text="@string/location"
            android:background="@color/white"
            android:textColor="@color/textColorSecondary"
            android:translationX="@dimen/translationX"
            app:layout_anchor="@id/rl_location"
            app:layout_anchorGravity="top|left|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:weightSum="2"
        android:layout_marginTop="@dimen/card_corner_radius"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.CoordinatorLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_checkin"
                android:background="@drawable/location_shape_background"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginRight="@dimen/inner_margin"
                android:padding="@dimen/card_corner_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_margin="@dimen/inner_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/checkin_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <TextView
                android:text="@string/checkin"
                android:background="@color/white"
                android:textColor="@color/textColorSecondary"
                android:translationX="@dimen/translationX"
                app:layout_anchor="@id/rl_checkin"
                app:layout_anchorGravity="top|left|start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.CoordinatorLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_checkout"
                android:background="@drawable/location_shape_background"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginLeft="@dimen/inner_margin"
                android:padding="@dimen/filter_corner_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_margin="@dimen/inner_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/checkout_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <TextView
                android:text="@string/checkout"
                android:background="@color/white"
                android:textColor="@color/textColorSecondary"
                android:translationX="@dimen/translationX"
                app:layout_anchor="@id/rl_checkout"
                app:layout_anchorGravity="top|left|start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/card_corner_radius"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.CoordinatorLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_count"
                android:background="@drawable/location_shape_background"
                android:layout_marginTop="@dimen/icon_size_small"
                android:layout_marginRight="@dimen/inner_margin"
                android:padding="@dimen/card_corner_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_margin="@dimen/inner_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/count_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <TextView
                android:text="@string/count"
                android:background="@color/white"
                android:textColor="@color/textColorSecondary"
                android:translationX="@dimen/translationX"
                app:layout_anchor="@id/rl_count"
                app:layout_anchorGravity="top|left|start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.CoordinatorLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_rooms"
                android:background="@drawable/location_shape_background"
                android:layout_marginTop="@dimen/icon_size_small"
                android:layout_marginLeft="@dimen/inner_margin"
                android:padding="@dimen/card_corner_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_margin="@dimen/inner_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/rooms_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <TextView
                android:text="@string/rooms"
                android:background="@color/white"
                android:textColor="@color/textColorSecondary"
                android:translationX="@dimen/translationX"
                app:layout_anchor="@id/rl_rooms"
                app:layout_anchorGravity="top|left|start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/bookmark_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_marginRight="@dimen/inner_margin"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/search_now"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="@dimen/filter_corner_radius"
                android:layout_marginBottom="@dimen/filter_corner_radius"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginLeft="@dimen/card_corner_radius"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_map_white"
                android:layout_marginTop="@dimen/filter_corner_radius"
                android:layout_marginBottom="@dimen/filter_corner_radius"
                android:layout_marginLeft="@dimen/bookmark_icon"
                android:layout_marginRight="@dimen/bookmark_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <TextView
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/top_search"
        android:textColor="@color/textColorSecondary"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_top_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/recent_search"
        android:textColor="@color/textColorSecondary"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recent_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
</android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
