<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/recyclerview_width"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/inner_margin"
        app:cardCornerRadius="@dimen/card_corner_radius"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hotel_image_height">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hotel_image_height">

            <android.support.v7.widget.AppCompatImageView
                android:src="@drawable/hotel_view_2"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hotel_image_height" />

            <RelativeLayout
                android:padding="@dimen/card_corner_radius"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hotel_image_height">


                <LinearLayout
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_rating_yellow"
                        android:layout_width="@dimen/icon_size_small"
                        android:layout_height="@dimen/icon_size_small" />
                    <TextView
                        android:textColor="@color/white"
                        android:layout_marginLeft="@dimen/inner_margin"
                        android:textStyle="bold"
                        android:text="@string/rating_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </LinearLayout>
                <android.support.v7.widget.CardView
                    app:cardCornerRadius="@dimen/inner_margin"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    app:cardBackgroundColor="@color/purple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/inner_margin"
                        android:layout_marginBottom="@dimen/inner_margin"
                        android:layout_marginLeft="@dimen/inner_margin_normal"
                        android:layout_marginRight="@dimen/inner_margin_normal"
                        android:text="@string/daily_charge"
                        android:textSize="@dimen/text_size_body_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </FrameLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:padding="@dimen/inner_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_hotel_name"
            android:layout_margin="@dimen/inner_margin"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/iconColorCore"
            android:text="@string/hotel_name"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_discount"
            android:layout_margin="@dimen/inner_margin"
            android:layout_alignTop="@id/tv_hotel_name"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorAccent"
            android:text="@string/discount"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_hotel_location"
            android:layout_margin="@dimen/inner_margin"
            android:layout_below="@id/tv_hotel_name"
            android:layout_alignParentLeft="true"
            android:textColor="@color/textColorSecondary"
            android:text="@string/hotel_location"
            android:textSize="@dimen/text_size_body_normal"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_hotel_presents"
            android:layout_margin="@dimen/inner_margin"
            android:layout_alignBottom="@id/tv_hotel_location"
            android:layout_alignParentRight="true"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_size_body_small"
            android:text="@string/hotel_presents"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>
